Added some comments to config.default, hacking.txt

--- a/docs/hacking.txt
+++ b/docs/hacking.txt
@@ -13,5 +13,12 @@ ClientSide:
 jQuery
 Datatables
 Flotr2
+Moment.js
+
+User interface:
+---
+Bootstrap 3.0
+Font Awesome
 
 For persistent storage (sorting and search in datatables) you need a browser that supports localStorage
+
