--- a/assets/locales/nl.json
+++ b/assets/locales/nl.json
@@ -8,6 +8,9 @@
 		"secure": "Veilige verbinding",
 		"username": "Gebruikersnaam"
 	},
+	"date": {
+		"year": "jaar"
+	},
 	"listing": {
 		"ard": {
 			"name": "Naam",
