--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -3,10 +3,21 @@
 		"author": "Arjen van Bochoven"
 	},
 	"auth": {
-		"username": "Username",
-		"password": "Password",
+		"addtoconfig": "Add this line to config.php:",
+		"back_to_site": "Back to site",
+		"empty_not_allowed": "Empty values are not allowed",
+		"error_contacting_AD": "An error ocurred while contacting AD",
+		"gen_other": "Generate another",
+		"generate": "Generate",
+		"generate_hash": "Generate password hash",
+		"generated_hash": "Generated hash",
 		"insecure": "Insecure connection, switch to secure",
-		"secure": "You're using a secure connection"
+		"noauth_found": "No authentication information found, please add an account to the config file.",
+		"not_authorized": "Not authorized",
+		"password": "Password",
+		"secure": "You're using a secure connection",
+		"username": "Username",
+		"wrong_user_or_pass": "Wrong username or password"
 	},
 	"date": {
 		"year": "year"
