Add locales for de and es

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -66,7 +66,9 @@
 	"name": "Name",
 	"nav": {
 		"lang": {
+			"de": "Deutsch",
 			"en": "English",
+			"es": "Español",
 			"nl": "Nederlands"
 		},
 		"listings": {
