--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -135,6 +135,7 @@
 	},
 	"pending": "Pending",
 	"path": "Path",
+	"serial": "Serialnumber",
 	"unavailable": "Unavailable",
 	"unknown": "Unknown",
 	"version": "Version",
