--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -103,7 +103,7 @@
 			"ard": "Apple Remote Desktop",
 			"bluetooth": "Bluetooth",
 			"clients": "Clients",
-			"directoryservice": "Verzeichnisdiesnte",
+			"directoryservice": "Verzeichnisdienste",
 			"disk": "Festplatten",
 			"displays": "Displays",
 			"hardware": "Hardware",
