serial number display fix

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -138,7 +138,7 @@
 	},
 	"pending": "Pending",
 	"path": "Path",
-	"serial": "Serialnumber",
+	"serial": "Serial Number",
 	"unavailable": "Unavailable",
 	"unauthorized": "You are not authorized",
 	"unknown": "Unknown",
