--- a/assets/locales/nl.json
+++ b/assets/locales/nl.json
@@ -41,6 +41,13 @@
 		"no_install_history": "Geen installatie historie",
 		"process_name": "Procesnaam"
 	},
+	"chart": {
+		"stackedarea": {
+			"stacked": "Gestapeld",
+			"stream": "Stroom",
+			"expanded": "Geëxpandeerd"
+		}
+	},
 	"configuration": "Configuratie",
 	"date": {
 		"year": "jaar"
