--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -44,6 +44,13 @@
 		"no_install_history": "No install history",
 		"process_name": "Process Name"
 	},
+	"chart": {
+		"stackedarea": {
+			"stacked": "Stacked",
+			"stream": "Stream",
+			"expanded": "Expanded"
+		}
+	},
 	"configuration": "Configuration",
 	"date": {
 		"year": "year"
