Localized the Power Widget
I have localized the power widget. However - I used google translate so
I worry the translations may be off in German and Dutch. Can anyone
translate?

--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -132,6 +132,7 @@
 			"hardware": "Hardware-Bericht",
 			"munki": "Munki-Bericht",
 			"network": "Netzwerk-Bericht"
+			"power": "Strom-Bericht"
 		},
 		"user": {
 			"logout": "Abmelden"
@@ -163,6 +164,13 @@
 			"notbound": "Nicht gebunden",
 			"info": "Summe seit Erfassung dieser Daten",
 			"title": "An Verzeichnisdienste gebunden"
-		}	
+		},
+		"power": {
+			"missing": "Fehlt",
+			"normal": "Normal",
+			"now": "Jetzt",
+			"service": "Service",
+			"soon": "Bald"
+		}
 	}
 }
