Fix russian language switcher

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -104,7 +104,8 @@
 			"de": "Deutsch",
 			"en": "English",
 			"es": "Español",
-			"nl": "Nederlands"
+			"nl": "Nederlands",
+			"ru": "Русский"
 		},
 		"listings": {
 			"ard": "Apple Remote Desktop",
