Power translation update
Battery condition status translation updated.

--- a/assets/locales/ru.json
+++ b/assets/locales/ru.json
@@ -100,6 +100,13 @@
 	"memory": "Память",
 	"name": "Имя",
 	"nav": {
+		"lang": {
+			"de": "Немецкий",
+			"en": "Английский",
+			"es": "Испанский",
+			"nl": "Голандский",
+			"ru": "Русский"
+		},
 		"listings": {
 			"ard": "Apple Remote Desktop",
 			"bluetooth": "Bluetooth",
