Power condition translation update
Fixed the translation of some power states.

--- a/assets/locales/ru.json
+++ b/assets/locales/ru.json
@@ -159,9 +159,9 @@
 		},
 		"power": {
 			"missing": "Отсутствует",
-			"normal": "Нормально",
+			"normal": "Нормальное",
 			"now": "Сейчас",
-			"service": "Служба",
+			"service": "Сервис",
 			"soon": "Скоро"
 		}	
 	}
