--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -174,6 +174,13 @@
 	"version": "Version",
 	"warning": "Warning",
 	"warning_plural": "Warnings",
+	"warranty": {
+		"supported_until": "Supported until __date__",
+		"supported_no_applecare": "Supported until __date__. No Applecare",
+		"unregistered": "Unregistered",
+		"expired": "Expired on __date__",
+		"coverage": "Warranty Coverage"
+	},
 	"widget": {
 		"age": {
 			"title": "Hardware Age"
