--- a/assets/locales/ru.json
+++ b/assets/locales/ru.json
@@ -97,7 +97,9 @@
 		},
 		"username": "Имя пользователя"
 	},
-	"memory": "Память",
+	"memory": {
+		"memory": "Память"
+	},
 	"name": "Имя",
 	"nav": {
 		"listings": {
