--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -6,7 +6,9 @@
 		"bu_overview": "Business Units",
 		"delete_failed": "Remove failed: ",
 		"edit_bu": {
-			"title": "Edit Business Unit"
+			"title": "Edit Business Unit",
+			"name": "Business Unit Name",
+			"address": "Adress"
 		},
 		"remove_bu": {
 			"title": "Remove Business Unit",
