--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -10,6 +10,9 @@
 			"name": "Business Unit Name",
 			"address": "Adress"
 		},
+		"new_bu": {
+			"title": "New Business Unit"
+		},
 		"remove_bu": {
 			"title": "Remove Business Unit",
 			"content": "When you remove this business unit, all related data will be removed. You cannot undo this."
