Add users and managers to bu ui

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -13,6 +13,10 @@
 		"edit_mg": {
 			"title": "Edit Machine Groups"
 		},
+		"edit_user": {
+			"title": "Edit Users",
+			"add_user": "Add user"
+		},
 		"new_bu": {
 			"title": "New Business Unit"
 		},
