Add support for adding/removing machinegroups

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -17,6 +17,10 @@
 			"title": "Edit Users",
 			"add_user": "Add user"
 		},
+		"mg": {
+			"title": "Machine Groups",
+			"add_group": "New Group"
+		},
 		"new_bu": {
 			"title": "New Business Unit"
 		},
